--- a/index-5.html
+++ b/index-5.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Weston 2- Digital Conference HTML Template | Homepage 05</title>
+<title>Weston - Digital Conference HTML Template | Homepage 05</title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
