--- a/index.html
+++ b/index.html
@@ -311,25 +311,34 @@
 <footer class="main-footer" style="background-image:url(images/background/4.jpg);">
 
         <!-- Footer Content -->
-        <div class="footer-content">
-            <div class="footer-logo"><a href="#"><img src="images/logo.png" alt=""></a></div>
-            <div class="social-links">
-                <div class="text-box">
-                    <h3>Social Connections</h3>
-                    <div class="text">You should connect social area for Any update</div>
+     <div class="auto-container">
+            <!-- Upper Box -->
+        <div class="upper-box">
+            <div class="row">
+
+                <div class="title-column col-lg-6 col-md-12 col-sm-12">
+                    <h2>¡Suscríbete a <br> nuestra newsletter ahora!</h2>
                 </div>
-                <ul class="social-icon-colored">
-                    <li class="google-plus"><a href="#"><span class="fab fa-google-plus-g"></span></a></li>
-                    <li class="facebbok"><a href="#"><span class="fab fa-facebook-f"></span></a></li>
-                    <li class="dribble"><a href="#"><span class="fab fa-dribbble"></span></a></li>
-                    <li class="twitter"><a href="#"><span class="fab fa-twitter"></span></a></li>
-                    <li class="instagram"><a href="#"><span class="fab fa-instagram"></span></a></li>
-                    <li class="vimeo"><a href="#"><span class="fab fa-vimeo-v"></span></a></li>
-                </ul>
+                <div class="form-column col-lg-6 col-md-12 col-sm-12">
+                    <!--Newsletter Form-->
+                    <div class="newsletter-form">
+                        <form method="post" action="blog.html">
+                            <div class="form-group">
+                                <input type="email" name="field-name" value="" placeholder="Your email" required>
+                                <button type="submit" class="theme-btn btn-style-one">Suscribirse ahora <span class="flaticon-arrow"></span></button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
-            <div class="copyright-text">© Copyright <a href="#">Weston</a> 2019. All Right Reserved.</div>
         </div>
-    </div>
+     <div class="footer-content">
+        <div class="copyright-text">© <a href="#">Python España & PyConES 2021 Org </a></div>
+     </div>
+
+     </div>
+
+
 </footer>
 <!-- End Footer -->
 
