Añadir imágenes para portada.

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 data-rotate="0"
                 data-saveperformance="off"
                 data-slotamount="default"
-                data-thumb="images/main-slider/2.jpg"
+                data-thumb="images/main-slider/5.jpg"
               >
                 <img
                   alt=""
@@ -261,7 +261,7 @@
                 </div>
               </li>
 
-              <!-- Slide 1 -->
+              <!-- Slide 2 -->
               <li
                 data-transition="parallaxvertical"
                 data-description="Slide Description"
@@ -287,7 +287,7 @@
                 data-rotate="0"
                 data-saveperformance="off"
                 data-slotamount="default"
-                data-thumb="images/main-slider/2.jpg"
+                data-thumb="images/main-slider/6.jpg"
               >
                 <img
                   alt=""
@@ -297,7 +297,142 @@
                   data-bgposition="center center"
                   data-bgrepeat="no-repeat"
                   data-no-retina=""
-                  src="images/main-slider/5.jpg"
+                  src="images/main-slider/6.jpg"
+                />
+
+                <div
+                  class="tp-caption tp-resizeme big-ipad-hidden tp-shape tp-shapewrapper rs-parallaxlevel-4"
+                  data-paddingbottom="[0,0,0,0]"
+                  data-paddingleft="[0,0,0,0]"
+                  data-paddingright="[0,0,0,0]"
+                  data-paddingtop="[0,0,0,0]"
+                  data-responsive_offset="on"
+                  data-type="text"
+                  data-height="none"
+                  data-whitespace="nowrap"
+                  data-width="none"
+                  data-hoffset="['30','15','15','15']"
+                  data-voffset="['50','0','0','0']"
+                  data-x="['left','left','left','left']"
+                  data-y="['middle','middle','middle','middle']"
+                  data-textalign="['top','top','top','top']"
+                  data-frames='[{"delay":500,"speed":1000,"frame":"0","from":"z:0;rX:0;rY:0;rZ:0;sX:0.9;sY:0.9;skX:0;skY:0;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"auto:auto;","ease":"Power3.easeInOut"}]'
+                >
+                  <div class="event-date">
+                    <div class="anim-icons">
+                      <span class="icon icon-star-1"></span>
+                      <span class="icon icon-star-2"></span>
+                      <span class="icon icon-star-3"></span>
+                      <span class="icon icon-star-4"></span>
+                      <span class="icon icon-star-5"></span>
+                      <span class="icon icon-star-6"></span>
+                      <span class="icon twist-line-1"></span>
+                      <span class="icon icon-circle-12"></span>
+                    </div>
+                    <div class="date"><span>2-3</span> Oct</div>
+                  </div>
+                </div>
+
+                <div
+                  class="tp-caption"
+                  data-paddingbottom="[0,0,0,0]"
+                  data-paddingleft="[0,0,0,0]"
+                  data-paddingright="[0,0,0,0]"
+                  data-paddingtop="[0,0,0,0]"
+                  data-responsive_offset="on"
+                  data-type="text"
+                  data-height="none"
+                  data-width="['670','670','670','400']"
+                  data-whitespace="normal"
+                  data-hoffset="['0','0','15','15']"
+                  data-voffset="['-110','-110','-110','-80']"
+                  data-x="['right','right','left','left']"
+                  data-y="['middle','middle','middle','middle']"
+                  data-frames='[{"delay":1000,"speed":1500,"frame":"0","from":"y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"auto:auto;","ease":"Power3.easeInOut"}]'
+                >
+                  <div class="title">2 y 3 de Octubre de 2021</div>
+                </div>
+
+                <div
+                  class="tp-caption"
+                  data-paddingbottom="[0,0,0,0]"
+                  data-paddingleft="[0,0,0,0]"
+                  data-paddingright="[0,0,0,0]"
+                  data-paddingtop="[0,0,0,0]"
+                  data-responsive_offset="on"
+                  data-type="text"
+                  data-height="none"
+                  data-width="['670','670','670','470']"
+                  data-whitespace="normal"
+                  data-hoffset="['0','0','15','15']"
+                  data-voffset="['50','50','50','50']"
+                  data-x="['right','right','left','left']"
+                  data-y="['middle','middle','middle','middle']"
+                  data-frames='[{"delay":1500,"speed":1500,"frame":"0","from":"y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"auto:auto;","ease":"Power3.easeInOut"}]'
+                >
+                  <h2>PyConES 2021</h2>
+                </div>
+
+                <div
+                  class="tp-caption tp-resizeme"
+                  data-paddingbottom="[0,0,0,0]"
+                  data-paddingleft="[0,0,0,0]"
+                  data-paddingright="[0,0,0,0]"
+                  data-paddingtop="[0,0,0,0]"
+                  data-responsive_offset="on"
+                  data-type="text"
+                  data-height="none"
+                  data-whitespace="normal"
+                  data-width="['670','650','650','400']"
+                  data-hoffset="['0','15','15','15']"
+                  data-voffset="['180','190','190','180']"
+                  data-x="['right','right','left','left']"
+                  data-y="['middle','middle','middle','middle']"
+                  data-frames='[{"delay":2000,"speed":1500,"frame":"0","from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","to":"o:1;","ease":"Power4.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"auto:auto;","ease":"Power3.easeInOut"}]'
+                >
+                  <div class="info-box">
+                    <span class="icon fa fa-map-marker"></span> Online
+                  </div>
+                </div>
+              </li>
+
+              <!-- Slide 3 -->
+              <li
+                data-transition="parallaxvertical"
+                data-description="Slide Description"
+                data-easein="default"
+                data-easeout="default"
+                data-fsmasterspeed="1500"
+                data-fsslotamount="7"
+                data-fstransition="fade"
+                data-hideafterloop="0"
+                data-hideslideonmobile="off"
+                data-index="rs-1683"
+                data-masterspeed="default"
+                data-param1=""
+                data-param10=""
+                data-param2=""
+                data-param3=""
+                data-param4=""
+                data-param5=""
+                data-param6=""
+                data-param7=""
+                data-param8=""
+                data-param9=""
+                data-rotate="0"
+                data-saveperformance="off"
+                data-slotamount="default"
+                data-thumb="images/main-slider/7.jpg"
+              >
+                <img
+                  alt=""
+                  class="rev-slidebg"
+                  data-bgfit="cover"
+                  data-bgparallax="10"
+                  data-bgposition="center center"
+                  data-bgrepeat="no-repeat"
+                  data-no-retina=""
+                  src="images/main-slider/7.jpg"
                 />
 
                 <div
