Moar c4p but poorly formatted

--- a/index.html
+++ b/index.html
@@ -314,6 +314,19 @@
                 <li>con un enfoque social,</li>
                 <li>saltos entre distintos campos profesionales,</li>
                 <li>o simplemente la experiencia de Python y el impacto en tu vida.</li></ul>
+                <br><ul>además de temáticas interesantes como, pero sin estar limitado a:
+                <li><b>Core</b> - Características del lenguaje, implementaciones de Python (CPython, Pypy,...), extensión de Python y biblioteca estándar, aspectos internos del lenguaje</li>
+                <li><b>Comunidad, sociedad y cultura</b> - Diversidad, salud, productividad, problemas en el sector tecnológico/comunidad, privacidad, participación ciudadana, proyectos tecnológicos con fines sociales,…
+                <li><b>Ciencia de datos, Machine Learning e IA</b>
+                <li><b>Computación científica</b> - Uso de Python en ciencia e investigación: SIG, matemáticas, simulaciones, espacio, bioingeniería,…
+                <li><b>Web</b> - Desarrollo Web, APIs, Microservicios,…
+                <li><b>Aplicaciones de Escritorio</b> - Qt, GTK+, Tkinter, Gnome, KDE, Accesibilidad,…
+                <li><b>Videojuegos y Diseño</b> - Python en el desarrollo de videojuegos, animación, modelado 3D,…
+                <li><b>Python Embebido e IoT</b> - MicroPython, robótica, Arduino, Raspberry Pi,…
+                <li><b>Sys / DevOps</b> - Herramientas de desarrollo y automatización, tests, CI / CD, contenedores, orquestación, registro y monitorización,…
+                <li><b>Redes y seguridad</b> - Programación de redes, seguridad de redes, cifrado,...
+                </ul>
+                <br>Envía tus propuestas en el siguiente enlace: <a href="https://forms.gle/baya52oZJo6KMat17">Enviar Propuesta</a>
                 </div>
                 <div class="btn-box"><a href="#" class="theme-btn btn-style-one">Contáctanos <span class="flaticon-arrow"></span></a></div>
             </div>
