feat: improve styles of text div

--- a/index.html
+++ b/index.html
@@ -310,7 +310,9 @@
                 <br>
                 <br>Para la versión de este año estamos buscando charlas que tengan una <b>duración de 20 minutos</b>, más 10 minutos de preguntas, lo que nos dará la oportunidad de crear un programa variado y adecuado para los 2 días de conferencia.
                 <br>
-                <br><ul><b>Valoramos</b> mucho las personas que estén desarrollando proyectos:
+                <br>
+                <b>Valoramos</b> mucho las personas que estén desarrollando proyectos:
+                <ul class="value-points">
                 <li>con un enfoque social,</li>
                 <li>saltos entre distintos campos profesionales,</li>
                 <li>o simplemente la experiencia de Python y el impacto en tu vida.</li></ul>
