Terminando con el C4P

--- a/index.html
+++ b/index.html
@@ -482,6 +482,14 @@
                 <li><b>Redes y seguridad</b> - Programación de redes, seguridad de redes, cifrado,...
                 </ul>
                 <br>Envía tus propuestas en el siguiente enlace: <a href="https://forms.gle/baya52oZJo6KMat17">Enviar Propuesta</a>
+                <br>
+                <br>
+                Consideraciones adicionales:
+                <ul class="valuable-points">
+                <li>Es posible enviar más de una propuesta por persona,</li>
+                <li>Se aceptan charlas con más de un ponente,</li>
+                <li>Te notificaremos tanto si tu propuesta es aceptada, como si no lo es.</li>
+                </ul>
                 </div>
                 <div class="btn-box"><a href="#" class="theme-btn btn-style-one">Contáctanos <span class="flaticon-arrow"></span></a></div>
             </div>
