fix: removed duplicate contact button

--- a/index.html
+++ b/index.html
@@ -491,12 +491,7 @@
                 <li>Te notificaremos tanto si tu propuesta es aceptada, como si no lo es.</li>
                 </ul>
                 </div>
-                <div class="btn-box"><a href="#" class="theme-btn btn-style-one">Contáctanos <span class="flaticon-arrow"></span></a></div>
-            </div>
-            <div class="btn-box">
-              <a href="#" class="theme-btn btn-style-one"
-                >Contáctanos <span class="flaticon-arrow"></span
-              ></a>
+                <div class="btn-box"><a href="mailto:contact@es.pycon.org?subject=PyConES 2021" class="theme-btn btn-style-one">Contáctanos <span class="flaticon-arrow"></span></a></div>
             </div>
           </div>
         </div>
