--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
                 <br>
                 <br>Si esto es algo totalmente nuevo para ti, queremos ofrecerte nuestra ayuda con un proceso de mentorización para que puedas preparar tu propuesta, y aclarar todas tus dudas. Puedes escribir un correo <a href="mailto:contact@es.pycon.org?subject=Mentorización PyConES">a la organización</a> y te guiaremos.
                 <br>
-                <br>Estamos buscando personas de <b>todos los niveles y campos de experiencia</b>, para que juntos podamos definir una conferencia dedicada a todas las personas de la comunidad.
+                <br>Estamos buscando personas de <b>todos los niveles y campos de experiencia</b>, para que con tu ayuda podamos definir una conferencia dedicada a todas las personas de la comunidad.
                 <br>
                 <br>Para la versión de este año estamos buscando charlas que tengan una <b>duración de 20 minutos</b>, más 10 minutos de preguntas, lo que nos dará la oportunidad de crear un programa variado y adecuado para los 2 días de conferencia.
                 <br>
@@ -487,7 +487,7 @@
                 Consideraciones adicionales:
                 <ul class="valuable-points">
                 <li>Es posible enviar más de una propuesta por persona,</li>
-                <li>Se aceptan charlas con más de un ponente,</li>
+                <li>Se aceptan charlas con varias personas como ponentes,</li>
                 <li>Te notificaremos tanto si tu propuesta es aceptada, como si no lo es.</li>
                 </ul>
                 </div>
