Varios ajustes: - Enlaces del menú a slideshow y contacto abajo, en vez de nueva página. - Cuenta Cada Segundo Hasta El Evento sin tanta mayúscula. :) - Pequeño reformateado del C4P. - Botón de abajo del C4P para enviar propuesta. - Sección de contacto + RRSS abajo en vez de newsletter. Podemos restaurar la newsletter más tarde si la ponemos.

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                   >
                     <ul class="navigation clearfix">
                       <li class="current dropdown">
-                        <a href="index-5-copy.html">Inicio</a>
+                        <a href="#rev_slider_one_wrapper">Inicio</a>
                       </li>
-                      <li><a href="contact.html">Contacto</a></li>
+                      <li><a href="#contact">Contacto</a></li>
                     </ul>
                   </div>
                 </nav>
@@ -543,8 +543,8 @@
             <div class="title-column">
               <div class="inner-column">
                 <h3>
-                  Cuenta Cada <br />Segundo Hasta <br />
-                  El Evento
+                  Cuenta cada <br />segundo hasta <br />
+                  el evento
                 </h3>
               </div>
             </div>
@@ -581,14 +581,13 @@
 
         <div class="auto-container">
           <div class="sec-title text-center">
-            <span class="title">Acerca de la conferencia</span>
             <h2>Llamada a <br />Propuestas</h2>
           </div>
 
             <div class="content-box">
-                <div class="text">Saber <b>expresar nuestras ideas</b> de forma clara y concisa es muy valioso, no solo para conferencias, sino también para cualquier otro ámbito donde la comunicación oral sea la base de la colaboración o actividad, por ello queremos invitarte a que participes en la PyConES 2021 y puedas así compartir junto a la comunidad hispanohablante de Python ese proyecto o idea interesante que llevas tiempo trabajando o tienes en mente, o la experiencia que has tenido en el último tiempo. Para esto, estamos muy felices de anunciar que el llamado de ponencias (call for papers) está abierto hasta el día:
-                <br>
-                <br><b>Domingo 18 de Abril.</b>
+                <div class="text">Saber <b>expresar nuestras ideas</b> de forma clara y concisa es muy valioso, no solo para conferencias, sino también para cualquier otro ámbito donde la comunicación oral sea la base de la colaboración o actividad, por ello queremos invitarte a que participes en la PyConES 2021 y puedas así compartir junto a la comunidad hispanohablante de Python ese proyecto o idea interesante que llevas tiempo trabajando o tienes en mente, o la experiencia que has tenido en el último tiempo. <br><br>
+                
+                Para esto, estamos muy felices de anunciar que el llamado de ponencias (call for papers) está abierto hasta el <b>domingo 18 de Abril.</b>
                 <br>
                 <br>Si esto es algo totalmente nuevo para ti, queremos ofrecerte nuestra ayuda con un proceso de mentorización para que puedas preparar tu propuesta, y aclarar todas tus dudas. Puedes escribir un correo <a href="mailto:contact@es.pycon.org?subject=Mentorización PyConES">a la organización</a> y te guiaremos.
                 <br>
@@ -626,11 +625,13 @@
                 <li>Te notificaremos tanto si tu propuesta es aceptada, como si no lo es.</li>
                 </ul>
                 </div>
-                <div class="btn-box"><a href="mailto:contact@es.pycon.org?subject=PyConES 2021" class="theme-btn btn-style-one">Contáctanos <span class="flaticon-arrow"></span></a></div>
+                <div class="btn-box"><a href="https://forms.gle/baya52oZJo6KMat17" class="theme-btn btn-style-one">Enviar propuesta <span class="flaticon-arrow"></span></a></div>
             </div>
           </div>
         </div>
       </section>
+
+      <div style="padding-top:20px; background-color: #ffc600;"></div>
 
       <!-- Main Footer -->
       <footer
@@ -639,37 +640,16 @@
       >
         <!-- Footer Content -->
         <div class="auto-container">
-          <!-- Upper Box -->
-          <div class="upper-box">
-            <div class="row">
-              <div class="title-column col-lg-6 col-md-12 col-sm-12">
-                <h2>
-                  ¡Suscríbete a <br />
-                  nuestra newsletter ahora!
-                </h2>
-              </div>
-              <div class="form-column col-lg-6 col-md-12 col-sm-12">
-                <!--Newsletter Form-->
-                <div class="newsletter-form">
-                  <form method="post" action="blog.html">
-                    <div class="form-group">
-                      <input
-                        type="email"
-                        name="field-name"
-                        value=""
-                        placeholder="Tu email"
-                        required
-                      />
-                      <button type="submit" class="theme-btn btn-style-one">
-                        Suscribirse ahora <span class="flaticon-arrow"></span>
-                      </button>
-                    </div>
-                  </form>
-                </div>
-              </div>
-            </div>
-          </div>
           <div class="footer-content">
+            <div class="social-links" id="contact">
+                <h3>Contacto y RRSS</h3>
+
+                <ul class="social-icon-colored">
+                    <li class="dribble"><a href="mailto:contact@es.pycon.org"><span class="fas fa-envelope-open-text"></span></a></li>
+                    <li class="twitter"><a href="https://twitter.com/PyConES"><span class="fab fa-twitter"></span></a></li>
+                    <li class="google-plus"><a href="https://www.youtube.com/channel/UCyth_6hqft9a7B_thdwYyww"><span class="fab fa-youtube"></span></a></li>
+                </ul>
+            </div>
             <div class="copyright-text">
               © <a href="#">Python España & PyConES 2021 Org </a>
             </div>
