--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
                       <li class="current dropdown">
                         <a href="#rev_slider_one_wrapper">Inicio</a>
                       </li>
+                      <li>
+                        <a href="#c4p">C4P</a>
+                      </li>
                       <li><a href="#contact">Contacto</a></li>
                     </ul>
                   </div>
@@ -567,6 +570,7 @@
       <section
         class="about-section-two style-two"
         style="background-image: url(images/background/17.jpg)"
+        id="c4p"
       >
         <div class="parallax-scene parallax-scene-1 anim-icons">
           <span
