Añadida una foto chula para la sección about para el issue #6

--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
                 <div class="image-column col-lg-6 col-md-12 col-sm-12">
                     <div class="inner-column">
                         <div class="image-box">
-                            <figure class="image wow fadeInRight animated" style="visibility: visible; animation-name: fadeInRight;"><a href="images/resource/image-1.jpg" class="lightbox-image" data-fancybox="images"><img src="images/resource/image-1.jpg" alt=""></a></figure>
+                            <figure class="image wow fadeInRight animated" style="visibility: visible; animation-name: fadeInRight;"><a href="images/gallery/pycon2019-43.jpg" class="lightbox-image" data-fancybox="images"><img src="images/gallery/pycon2019-43.jpg" alt=""></a></figure>
                         </div>
                     </div>
                 </div>
