Adding logos and favicon

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <div class="pull-left logo-box">
                 <div class="logo">
                   <a href="index.html"
-                    ><img src="images/logo.png" alt="" title=""
+                    ><img src="images/PyConES2021_logo_1.png" alt="" title=""
                   /></a>
                 </div>
               </div>
@@ -535,6 +535,9 @@
             </div>
           </div>
           <div class="footer-content">
+            <a href="https://www.es.python.org/"
+                  ><img src="images/pythonES_logo.png" alt="" title=""
+                /></a>
             <div class="copyright-text">
               © <a href="#">Python España & PyConES 2021 Org </a>
             </div>
