--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <div class="pull-left logo-box">
                 <div class="logo">
                   <a href="index.html"
-                    ><img src="images/PyConES2021_logo_1.png" alt="" title=""
+                    ><img src="images/logo_pycones2021.svg" alt="" title=""
                   /></a>
                 </div>
               </div>
@@ -607,7 +607,7 @@
             </div>
         </div>
     </section>
-    
+
       <!-- FIN ACERCA DE LA PYCON -->
 
       <!-- About Section Two -->
@@ -634,7 +634,7 @@
 
             <div class="content-box">
                 <div class="text">Saber <b>expresar nuestras ideas</b> de forma clara y concisa es muy valioso, no solo para conferencias, sino también para cualquier otro ámbito donde la comunicación oral sea la base de la colaboración o actividad, por ello queremos invitarte a que participes en la PyConES 2021 y puedas así compartir junto a la comunidad hispanohablante de Python ese proyecto o idea interesante que llevas tiempo trabajando o tienes en mente, o la experiencia que has tenido en el último tiempo. <br><br>
-                
+
                 Para esto, estamos muy felices de anunciar que el llamado de ponencias (call for papers) está abierto hasta el <b>domingo 18 de Abril.</b>
                 <br>
                 <br>Si esto es algo totalmente nuevo para ti, queremos ofrecerte nuestra ayuda con un proceso de mentorización para que puedas preparar tu propuesta, y aclarar todas tus dudas. Puedes escribir un correo <a href="mailto:contact@es.pycon.org?subject=Mentorización PyConES">a la organización</a> y te guiaremos.
