Corregir logo móvil y cerrar panel lateral al seleccionar sección

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <nav class="menu-box">
             <div class="nav-logo">
               <a href="index.html"
-                ><img src="images/logo-2.png" alt="" title=""
+                ><img src="images/logo_pycones2021.svg" alt="" title=""
               /></a>
             </div>
 
