Agregar ideas para incluir en la propuesta

--- a/index.html
+++ b/index.html
@@ -663,6 +663,16 @@
                 <li><b>Sys / DevOps</b> - Herramientas de desarrollo y automatización, tests, CI / CD, contenedores, orquestación, registro y monitorización,…
                 <li><b>Redes y seguridad</b> - Programación de redes, seguridad de redes, cifrado,...
                 </ul>
+                <br>
+                Recuerda que <b>se votarán las propuestas</b> en base a su descripción, contenido y toda la información que nos quieras dar. Acá tienes unas ideas:
+                <ul class="valuable-points">
+                  <li>¿Qué te motivó a hacer esta charla?</li>
+                  <li>¿Estás resolviendo algún problema conocido? ¿Cuál?</li>
+                  <li>¿Es una charla sobre una experiencia personal o de comunidad?</li>
+                  <li>¿Hablas sobre un módulo o funcionalidad importante?</li>
+                  <li>Señalar "¿Qué aprenderán?" lo que las personas que participen en tu charla.</li>
+                </ul>
+                <br>
                 <br>Envía tus propuestas en el siguiente enlace: <a href="https://forms.gle/baya52oZJo6KMat17">Enviar Propuesta</a>
                 <br>
                 <br>
