Añadir subscripción a newsletter

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
                         <a href="#rev_slider_one_wrapper">Inicio</a>
                       </li>
                       <li>
+                        <a href="#newsletter">Apúntate</a>
+                      </li>
+                      <li>
                         <a href="#about">Acerca de</a>
                       </li>
                       <li>
@@ -569,6 +572,21 @@
       </section>
       <!-- End Coming Soon -->
 
+      <!-- Call To Action -->
+      <data id="mj-w-res-data" data-token="2a609127d3c34a252b160b843131368a" class="mj-w-data" data-apikey="5JG8" data-w-id="IT4" data-lang="es_ES" data-base="https://app.mailjet.com" data-width="640" data-height="437" data-statics="statics"></data>
+
+      <section id="newsletter" class="call-to-action" style="background-image: url(images/background/15.jpg);">
+          <div class="auto-container">
+              <div class="content-box">
+                  <span class="title">Newsletter</span>
+                  <h3>¡Apúntate!</h3>
+                  <div class="text">Si no quieres perderte ninguna noticia importante de ésta o futuras ediciones de la PyConES, suscríbete a nuestra lista de correo y te mantendremos al día.</div>
+                  <div class="btn-box"><a href="#" data-token="2a609127d3c34a252b160b843131368a" class="theme-btn btn-style-one" onclick="mjOpenPopin(event, this)">Inscribirme<span class="flaticon-arrow"></span></a></div>
+              </div>
+          </div>
+      </section>
+      <!-- End Call To Action -->
+
 
       <!-- ACERCA DE LA PYCON -->
 
@@ -637,7 +655,7 @@
 
                 Para esto, estamos muy felices de anunciar que el llamado de ponencias (call for papers) está abierto hasta el <b>domingo, 2 de mayo.</b>
                 <br>
-                <br>Si esto es algo totalmente nuevo para ti, queremos ofrecerte nuestra ayuda con un proceso de mentorización para que puedas preparar tu propuesta, y aclarar todas tus dudas. Puedes escribir un correo <a href="mailto:contact@es.pycon.org?subject=Mentorización PyConES">a la organización</a> y te guiaremos.
+                <br>Si esto es algo totalmente nuevo para ti, queremos ofrecerte nuestra ayuda con un proceso de mentorización para que puedas preparar tu propuesta, y aclarar todas tus dudas. Puedes escribir un correo <a href="mailto:contact@2021.es.pycon.org?subject=Mentorización PyConES">a la organización</a> y te guiaremos.
                 <br>
                 <br>Estamos buscando personas de <b>todos los niveles y campos de experiencia</b>, para que con tu ayuda podamos definir una conferencia dedicada a todas las personas de la comunidad.
                 <br>
@@ -706,7 +724,7 @@
                 <h3>Contacto y RRSS</h3>
 
                 <ul class="social-icon-colored">
-                    <li class="dribble"><a href="mailto:contact@es.pycon.org"><span class="fas fa-envelope-open-text"></span></a></li>
+                    <li class="dribble"><a href="mailto:contact@2021.es.pycon.org"><span class="fas fa-envelope-open-text"></span></a></li>
                     <li class="twitter"><a href="https://twitter.com/PyConES"><span class="fab fa-twitter"></span></a></li>
                     <li class="google-plus"><a href="https://www.youtube.com/channel/UCyth_6hqft9a7B_thdwYyww"><span class="fab fa-youtube"></span></a></li>
                 </ul>
@@ -755,5 +773,6 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcaOOcFcQ0hoTqANKZYz-0ii-J0aUoHjk"></script>
     <script src="js/map-script.js"></script>
     <!--End Google Map APi-->
+    <script type="text/javascript" src="https://app.mailjet.com/statics/js/widget.modal.js"></script>
   </body>
 </html>
