--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
             <div class="content-box">
                 <div class="text">Saber <b>expresar nuestras ideas</b> de forma clara y concisa es muy valioso, no solo para conferencias, sino también para cualquier otro ámbito donde la comunicación oral sea la base de la colaboración o actividad, por ello queremos invitarte a que participes en la PyConES 2021 y puedas así compartir junto a la comunidad hispanohablante de Python ese proyecto o idea interesante que llevas tiempo trabajando o tienes en mente, o la experiencia que has tenido en el último tiempo. <br><br>
 
-                Para esto, estamos muy felices de anunciar que el llamado de ponencias (call for papers) está abierto hasta el <b>domingo, 2 de mayo.</b>
+                  Para esto, estamos muy felices de anunciar que el llamado de ponencias (call for papers) está abierto hasta el domingo, <strike>2 de mayo</strike> <b>16 de mayo</b>.
                 <br>
                 <br>Si esto es algo totalmente nuevo para ti, queremos ofrecerte nuestra ayuda con un proceso de mentorización para que puedas preparar tu propuesta, y aclarar todas tus dudas. Puedes escribir un correo <a href="mailto:contact@2021.es.pycon.org?subject=Mentorización PyConES">a la organización</a> y te guiaremos.
                 <br>
@@ -701,7 +701,7 @@
                 <li>Te notificaremos tanto si tu propuesta es aceptada, como si no lo es.</li>
                 </ul>
                 </div>
-                <div class="btn-box"><a href="https://forms.gle/baya52oZJo6KMat17" class="theme-btn btn-style-one">Enviar propuesta <span class="flaticon-arrow"></span></a></div>
+                <div class="btn-box"><a href="https://docs.google.com/forms/d/e/1FAIpQLScjY_K6F6KS0gfXlxqTJ2D1ipjai2owxiQOdiJu99Sm6o-2xA/viewform" class="theme-btn btn-style-one">Enviar propuesta <span class="flaticon-arrow"></span></a></div>
             </div>
           </div>
         </div>
