Corrección url a la que corresponde

--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
                 <li>Te notificaremos tanto si tu propuesta es aceptada, como si no lo es.</li>
                 </ul>
                 </div>
-                <div class="btn-box"><a href="https://docs.google.com/forms/d/e/1FAIpQLScjY_K6F6KS0gfXlxqTJ2D1ipjai2owxiQOdiJu99Sm6o-2xA/viewform" class="theme-btn btn-style-one">Enviar propuesta <span class="flaticon-arrow"></span></a></div>
+                <div class="btn-box"><a href="https://forms.gle/baya52oZJo6KMat17" class="theme-btn btn-style-one">Enviar propuesta <span class="flaticon-arrow"></span></a></div>
             </div>
           </div>
         </div>
