--- a/index.html
+++ b/index.html
@@ -691,7 +691,8 @@
                   <li>Señalar "¿Qué aprenderán?" lo que las personas que participen en tu charla.</li>
                 </ul>
                 <br>
-                <br>Envía tus propuesta de charla en el siguiente enlace: <a href="https://forms.gle/baya52oZJo6KMat17">Enviar Propuesta de charla</a>
+                <br>Envía tu propuesta de charla en el siguiente enlace: <a href="https://forms.gle/baya52oZJo6KMat17">Enviar Propuesta de charla</a>
+
                 <br>O bien envíanos tus propuesta de taller en el siguiente enlace: <a href="https://forms.gle/fPfVJLtUyiixbvMJ9">Enviar Propuesta de taller</a>
                 <br>
                 <br>
