Arreglar errata tu/tus
Co-authored-by: Paula Guijarro <paulaguijarro@gmail.com>

--- a/index.html
+++ b/index.html
@@ -693,7 +693,8 @@
                 <br>
                 <br>Envía tu propuesta de charla en el siguiente enlace: <a href="https://forms.gle/baya52oZJo6KMat17">Enviar Propuesta de charla</a>
 
-                <br>O bien envíanos tus propuesta de taller en el siguiente enlace: <a href="https://forms.gle/fPfVJLtUyiixbvMJ9">Enviar Propuesta de taller</a>
+                <br>O bien envíanos tu propuesta de taller en el siguiente enlace: <a href="https://forms.gle/fPfVJLtUyiixbvMJ9">Enviar Propuesta de taller</a>
+
                 <br>
                 <br>
                 Consideraciones adicionales:
