Añadida sección de Patrocinadores

--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
                       <li>
                         <a href="#c4p">C4P</a>
                       </li>
+                      <li>
+                        <a href="#Patrocinadores">Patrocinadores</a>
+                      </li>
                       <li><a href="#contact">Contacto</a></li>
                     </ul>
                   </div>
@@ -712,6 +715,44 @@
           </div>
         </div>
       </section>
+
+
+<!-- SECCION PATROCINADORES  -->
+      <section
+        class="about-section-two style-two"
+        style="background-image: url(images/background/9.jpg)"
+        id="Patrocinadores"
+      >
+
+
+        <div class="auto-container">
+          <div class="sec-title text-center">
+            <h2>Patrocinadores</h2>
+          </div>
+
+            <div class="content-box">
+                <div class="text">
+                  <p>El patrocinio permite que el evento sea <strong>gratuito y universal</strong>, que haya más público y se alcance mayor difusión.</p>
+
+
+                  <p>El patrocinio también ayuda a toda la comunidad Python de habla hispana permitiendo que el <strong>software libre</strong> llegue a más gente y la comunidad crezca, sea más rica y más diversa con todos los beneficios que ello conlleva.</p>
+
+                  <p>Los patrocinadores también reciben visibilidad, posicionamiento y disfrutar de mayor <strong>prestigio</strong> dentro de la comunidad que puede derivar en mayor facilidad a la hora de buscar nuevos empleados o en la obtención de nuevos contratos.</p>
+
+                  </div><!-- text -->
+
+                  <div class="btn-container">
+                    <div class="btn-box"><a href="docs/folleto-patrocinadores.pdf" class="theme-btn btn-style-one">Consultar condiciones de patrocinio <span class="flaticon-arrow"></span></a></div>                  
+                  </div>
+          </div><!--content-box-->
+        </div><!--Auto-container-->
+      </section>
+
+
+
+
+
+
 
       <div style="padding-top:20px; background-color: #ffc600;"></div>
 
